--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4.17"
 noop-waker = "0.1.0"
 quinn-proto = "0.9.2"
 bytes = "1.3"
+async-io = "1.12.0"
 
 [dev-dependencies]
 simple_logger = "2.1.0"
