--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ description = "runtime independent async quic implementation"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
-async-net = "1.7.0"
 futures = "0.3.25"
 log = "0.4.17"
 noop-waker = "0.1.0"
@@ -17,7 +16,12 @@ async-io = "1.12.0"
 [dev-dependencies]
 simple_logger = "2.1.0"
 smol = "1.2.5"
+smol-potat = "1.1.2"
 clap = { version = "3.1.18", features = ["derive"] }
 rcgen = "0.9.3"
 anyhow = "1.0.44"
 rustls = "0.20.8"
+quinn = { version="0.9.3", features=["runtime-async-std", "futures-io"] }
+lazy_static = "1.4.0"
+test-log = "0.2.11"
+env_logger = "0.10.0"
