--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ noop-waker = "0.1.0"
 quinn-proto = "0.9.2"
 bytes = "1.3"
 async-io = "1.12.0"
+quinn-udp = "0.3.2"
+rustls = "0.20.8"
 
 [dev-dependencies]
 simple_logger = "2.1.0"
@@ -20,7 +22,6 @@ smol-potat = "1.1.2"
 clap = { version = "3.1.18", features = ["derive"] }
 rcgen = "0.9.3"
 anyhow = "1.0.44"
-rustls = "0.20.8"
 quinn = { version="0.9.3", features=["runtime-async-std", "futures-io"] }
 lazy_static = "1.4.0"
 test-log = "0.2.11"
