--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bytes = "1.3"
 async-io = "1.12.0"
 quinn-udp = "0.3.2"
 rustls = "0.20.8"
+h3 = { git = "https://github.com/FlorianUekermann/h3" }
 
 [dev-dependencies]
 simple_logger = "2.1.0"
