--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bytes = "1.3"
 async-io = "1.12.0"
 quinn-udp = "0.3.2"
 rustls = "0.20.8"
-h3 = { git = "https://github.com/FlorianUekermann/h3" }
+h3 = { git = "https://github.com/FlorianUekermann/h3", branch="traits" }
 
 [dev-dependencies]
 simple_logger = "2.1.0"
@@ -31,3 +31,5 @@ quinn = { version="0.9.3", features=["runtime-async-std", "futures-io"] }
 lazy_static = "1.4.0"
 test-log = "0.2.11"
 env_logger = "0.10.0"
+http = "0.2.8"
+rand = "0.8.5"
