fix pure quic test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ async-io = "1.12.0"
 quinn-udp = "0.3.2"
 rustls = "0.20.8"
 h3 = { git = "https://github.com/FlorianUekermann/h3", branch="traits" }
+event-listener = "2.5.3"
 
 [dev-dependencies]
 simple_logger = "2.1.0"
